--- a/client/src/pages/ChatPage/styles.scss
+++ b/client/src/pages/ChatPage/styles.scss
@@ -1,6 +1,6 @@
 .chat-page {
   background-color: #edeff5;
-  height: 100vh;
+  height: calc(100vh - 115px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,72 +15,19 @@
 
     .sidebar {
       flex: 1;
-      background-color: #3e3c61;
       position: relative;
-
-      .navbar {
-        display: flex;
-        align-items: center;
-        background-color: #686779;
-        height: 50px;
-        padding: 10px;
-        justify-content: space-between;
-        color: #ddddf7;
-
-        .logo {
-          font-weight: bold;
-        }
-
-        .user {
-          display: flex;
-          gap: 10px;
-
-          img {
-            background-color: #ddddf7;
-            height: 24px;
-            width: 24px;
-            border-radius: 50%;
-            object-fit: cover;
-          }
-
-          button {
-            background-color: #5d5b8d;
-            color: #ddddf7;
-            font-size: 10px;
-            border: none;
-            cursor: pointer;
-          }
-        }
-      }
-      .search {
-        border-bottom: 1px solid gray;
-
-        .searchForm {
-          padding: 10px;
-
-          input {
-            background-color: transparent;
-            border: none;
-            color: white;
-            outline: none;
-
-            &::placeholder {
-              color: lightgray;
-            }
-          }
-        }
-      }
+      border-right: 1px solid #ccc;
 
       .userChat {
         padding: 10px;
         display: flex;
         align-items: center;
         gap: 10px;
-        color: white;
         cursor: pointer;
-
+        border-bottom: 1px solid #ccc;
+        &.selected,
         &:hover {
-          background-color: #2f2d52;
+          background-color: #ddddf7;
         }
 
         img {
@@ -94,10 +41,11 @@
           span {
             font-size: 18px;
             font-weight: 500;
+            color: #4f4747;
           }
           p {
             font-size: 14px;
-            color: lightgray;
+            color: #4f4747;
           }
         }
       }
@@ -106,13 +54,13 @@
       flex: 2;
 
       .chatInfo {
-        height: 50px;
-        background-color: #5d5b8d;
+        height: 20px;
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 10px;
-        color: lightgray;
+        color: #fff;
+        background-color: #5d5b8d;
       }
 
       .chatIcons {
@@ -126,10 +74,9 @@
       }
 
       .messages {
-        background-color: #ddddf7;
         padding: 10px;
-        height: calc(100% - 160px);
-        overflow: scroll;
+        height: calc(100% - 130px);
+        overflow-y: scroll;
 
         .message {
           display: flex;
@@ -156,7 +103,8 @@
             gap: 10px;
 
             p {
-              background-color: white;
+              background-color: #8da4f1;
+              color: white;
               padding: 10px 20px;
               border-radius: 0px 10px 10px 10px;
               max-width: max-content;
